--- a/lib/countries/data/translation_corrections.yaml
+++ b/lib/countries/data/translation_corrections.yaml
@@ -14,3 +14,8 @@ oc:
   US: USA
 ar:
   PS: "فلسطين"
+  SA: "السعودية"
+  AE: "الامارات العربية المتحدة"
+  SD: "السودان"
+  SO: "الصومال‎"
+  SY: "سوريا"
